--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   list-style: none;
 }
+body {
+  background-color: lighten($color: salmon, $amount: 5%);
+}
 
 header {
   background-color: #edf9f6;
@@ -12,6 +15,7 @@ header {
     align-items: center;
     justify-content: space-around;
     img {
+      cursor: pointer;
       width: 300px;
       height: 100px;
       object-fit: cover;
@@ -22,45 +26,112 @@ header {
   }
 }
 .container {
-  background-color: lighten($color: salmon, $amount: 5%);
   margin-top: 50px;
   display: grid;
   place-content: center;
-  font-size: 25px;
+  font-size: 2rem;
+  @media (max-width: 768px) {
+    width: 100vw;
+  }
 }
 .inputArea {
-  text-align: justify;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   background-color: #edf9f6;
+  font-weight: 400;
+  text-transform: capitalize;
   padding: 10px;
   width: 600px;
-
+  @media (max-width: 600px) {
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
   & input {
     cursor: pointer;
     font-size: 15px;
     padding: 3px;
     width: 150px;
     margin-left: 50px;
+    @media (max-width: 600px) {
+      margin: 0;
+    }
   }
   & #parasLength {
-    margin-right: 50px;
+    margin-right: 60px;
+    @media (max-width: 600px) {
+      margin: 0;
+    }
   }
 }
-button {
+#generateBTN {
+  border-radius: 10px;
+  border: 0;
   display: block;
-  margin: 10px auto;
-  font-size: 20px;
+  margin: 20px auto;
+  font-size: 1.3rem;
   padding: 3px 5px;
   cursor: pointer;
+  background: darken(#27ede4, 10);
+  color: white;
+  font-style: bold;
 }
-#output {
-  margin: 10px auto 0;
-  width: 800px;
-  background-color: #edf9f6;
-  color: darken(#e7e7e7, 40);
-  font-size: 20px;
-  padding: 10px 20px;
+
+#wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  margin: 10px auto;
+  #output {
+    border-radius: 10px;
+    margin: 10px auto 0;
+    min-height: 300px;
+    background-color: #edf9f6;
+    color: darken(#e7e7e7, 40);
+    font-size: 20px;
+    padding: 30px 20px 10px;
+    opacity: 0;
+  }
+  & #copyReset {
+    display: none;
+    justify-content: flex-end;
+
+    & button {
+      background-color: lighten($color: salmon, $amount: 5%);
+      padding: 5px 10px;
+      font-size: 16px;
+      color: white;
+      border: 0;
+      cursor: pointer;
+      & img {
+        width: 20px;
+        object-fit: cover;
+      }
+      & > * {
+        vertical-align: middle;
+      }
+    }
+  }
+}
+footer {
+  width: 100%;
+  max-width: 800px;
+  margin: 75px auto 20px;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 500;
+  img {
+    width: 25px;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+  }
+  .copyright > * {
+    vertical-align: middle;
+    margin-bottom: 10px;
+  }
 }
